@@ -9,13 +9,13 @@ import school.faang.user_service.dto.event.EventDto;
 import school.faang.user_service.dto.event.EventFilterDto;
 import school.faang.user_service.dto.event.UpdateEventDto;
 import school.faang.user_service.entity.event.Event;
+import school.faang.user_service.filter.EventFilter;
 import school.faang.user_service.mapper.EventMapper;
-import school.faang.user_service.repository.event.EventParticipationRepository;
 import school.faang.user_service.repository.event.EventRepository;
 import school.faang.user_service.repository.user.UserRepository;
-
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
 
 @Data
 @RequiredArgsConstructor(onConstructor_ = @Autowired)
@@ -25,6 +25,7 @@ public class EventServiceImpl implements EventService {
     private final UserRepository userRepository;
     private final EventMapper eventMapper;
     private final UserContext userContext;
+    private final List<EventFilter> filters;
 
 
     @Override
@@ -37,41 +38,25 @@ public class EventServiceImpl implements EventService {
 
     @Override
     public EventDto update(long eventId, UpdateEventDto updateEventDto) {
-        Event event = eventRepository.findById(eventId).orElse(null);
+        Event event = eventRepository.findById(eventId)
+                .orElseThrow(() -> new IllegalArgumentException("Пустое значение"));
         eventMapper.update(updateEventDto, event);
         return eventMapper.toEventDto(event);
     }
 
     @SuppressWarnings({"checkstyle:LineLength", "checkstyle:CommentsIndentation"})
     @Override
-    public List<EventDto> getByFilters(EventFilterDto filters) {
-        List<Event> events = eventRepository.findAll();
+    public List<EventDto> getByFilters(EventFilterDto eventFilterDto) {
+        Stream<Event> filteredEvents = eventRepository.findAll().stream();
+        for (EventFilter eventFilter : filters) {
+            if (eventFilter.isApplicable(eventFilterDto)) {
+                filteredEvents = eventFilter.apply(filteredEvents, eventFilterDto);
+            }
+        }
 
-//        return events.stream()
-//
-//                .filter(event -> filters.getTitleContains() == null
-//                        || event.getTitle().toLowerCase().contains(filters.getTitleContains().toLowerCase()))
-//
-//
-//                .filter(event -> filters.getDescriptionContains() == null
-//                        || event.getDescription().toLowerCase().contains(filters.getDescriptionContains().toLowerCase()))
-//
-//
-//                .filter(event -> filters.getOwnerId() == 0
-//                        || (event.getOwner() != null && event.getOwner().getId() == filters.getOwnerId()))
-//
-//                .filter(event -> filters.getParticipantId() == 0
-//                        || (event.getParticipants() != null &&
-//                        event.getParticipants().stream()
-//                                .anyMatch(p -> p.getId() == filters.getParticipantId())))
-//
-//
-//                .filter(event -> filters.getEventType() == null
-//                        || event.getEventType() == filters.getEventType())
-//
-//                .map(eventMapper::toDto)
-//                .collect(Collectors.toList());
-        return null;
+        return filteredEvents
+                .map(eventMapper::toEventDto)
+                .toList();
     }
 
     @Override
